# bible-app

./: .devtools  .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindSWORD.cmake
src/: CMakeLists.txt  icons.yml
src/assets/: assets.qrc
src/backend/: bible.cpp  bible.h  biblechapter.cpp  biblechapter.h  biblemanager.cpp  biblemanager.h  module.cpp  module.h  plugin.cpp  progress.h  promise.h
src/icons/: icons.qrc
src/qml/: main.qml  qml.qrc
src/qml/components/: BibleView.qml  Placeholder.qml  VerseDelegate.qml
src/qml/ui/: HomeTab.qml  SettingsPage.qml
